site plan added

--- a/wrr/site-planning-rafting.html
+++ b/wrr/site-planning-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>Whitewater Wranglers Site Plan</h1>
+    <h2>Devyn Fernelius</h2>
+    <h2>WDD 130-05</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Our purpose is to share opinions with anyone who needs help finding the best rivers to have the best whitewater rafting experience on, whether your're a beginner, an expert, or somewhere in between.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Our audience is for people interested in whitewater rafting whether they're trying it for the first time or they're experts who want to go to a more challenging river. No matter what, these people want to go on a unique and challenging outdoor adventure. Our audience will most likely find these suggestions on their mobile devices.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/wrrlogo.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/4aa9e8-cae7b9-2e2f2f"
+      target="_blank">https://coolors.co/4aa9e8-cae7b9-2e2f2f</a>
 
     <table class="colors">
       <tr>
