--- a/wrr/index.html
+++ b/wrr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header> 
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/wrrlogo" alt="Whitewater Wranglers Logo"/>
+            <img class="logo" src="images/wrrlogo.jpg" alt="Whitewater Wranglers Logo"/>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
