--- a/wrr/index.html
+++ b/wrr/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Wranglers | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<link rel="stylesheet" href="styles/style.css">
+
 <body>
     <div id="content">
     <header> 
-        <a id="logo_link" href="index.html">
+        <a id="logo_link" href="index.html"></a>
             <img class="logo" src="images/wrrlogo.jpg" alt="Whitewater Wranglers Logo"/>
         <nav>
             <a href="index.html">Home</a>
@@ -24,11 +25,11 @@
         <img id="hero-img" src="images/whitewateradventures.jpg" alt="People enjoying rafting">
         </div>
         <section id="hero-msg">
-        <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Whitewater Wranglers </h4>
-        <div class="button-box">
-            <a class="'book" href="contactus.html">Book Now</a>
-        </div>
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories with Whitewater Wranglers </h4>
+            <div class="button-box">
+                <a class="'book" href="contactus.html">Book Now</a>
+            </div>
         </section>
     </div> 
 <main class="home-grid">
@@ -41,6 +42,7 @@
         <img class="card-img" src="images/indexcamping.jpg" alt="tent under stars">
         <img class="icon" src="images/fire_icon.png" alt="fire icon">
         <h2>Camping</h2>
+    </section>
     <section class="rapids-card">
         <img class="card-img" src="images/indexrapids.jpg" alt="rafting boat">
         <img class="icon" src="images/oars.png" alt="oars icon">
