--- a/wrr/index.html
+++ b/wrr/index.html
@@ -11,11 +11,12 @@
 <body>
     <div id="content">
     <header> 
-        <a id="logo_link" href="index.html"></a>
+        <a id="logo_link" href="index.html">
             <img class="logo" src="images/wrrlogo.jpg" alt="Whitewater Wranglers Logo"/>
+        </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#" target="_blank">Page 2</a>
+            <a href="#">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -28,7 +29,7 @@
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Whitewater Wranglers </h4>
             <div class="button-box">
-                <a class="'book" href="contactus.html">Book Now</a>
+                <a class="'book" href="rates.html">Book Now</a>
             </div>
         </section>
     </div> 
