--- a/wrr/site-plan-rafting.html
+++ b/wrr/site-plan-rafting.html
@@ -121,7 +121,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>About Us</h3>
+    <img src="images/wirepart1.PNG">
+    <img src="images/wirepart2.PNG">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
