--- a/wrr/contactus.html
+++ b/wrr/contactus.html
@@ -34,7 +34,7 @@
         </section>
     </div> 
     <section>
-        <div id="feedback">
+        <div id="feedback"></div>
             <form action="/my-handling-form-page" method="post">
                 <ul>
                 <li>
@@ -71,7 +71,6 @@
                     document.body.classList.toggle('moveDown');
                 });
             </script>
-        </div>
     </section>
     <div id="background"></div>
     <img class="mountains" src="images/indexmountains.jpg" alt="lake by mountains">
